Added labels for groupings and aggregations in aggregate query.